# neural_ai_network

./: LICENSE  README.md  pyproject.toml
src/neural_ai_network/calcium_imaging/: __init__.py  calcium_README.md  calcium_agent.py  calcium_data_loader.py  calcium_visualization.py
src/neural_ai_network/calcium_imaging/demos/: calcium_agent_config.json  pipeline_demo.py  process_real_data.py
src/neural_ai_network/core/: __init__.py  neural_model_trainer.py  neural_orchestrator.py
src/neural_ai_network/eeg/: __init__.py  data_loader.py  debug_test.py  eeg_agent.py  eeg_agent_config.json  preprocessing.py  test_eeg_agent.py
src/neural_ai_network/eeg/demos/: debug_eeglab_processor.py  eeg_pipeline_demo.py  openneuro_eeg_processor.py  pipeline_demo.py  test_eeglab_download.py  verbose_eeglab_processor.py
src/neural_ai_network/fmri/: fmri_agent.py  fmri_data_loadar.py  fmri_preprocessing.py
src/neural_ai_network/visualization/: __init__.py  neural_visualizer.py
