[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural_ai_network"
version = "0.1.0"
description = "A network of AI agents for neural data analysis"
readme = "README.md"
authors = [
    {name = "Sid Hulyalkar", email = "sid.soccer.21@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
keywords = ["neural", "eeg", "fmri", "ai", "analysis", "brain", "neuroscience", "calcium", "imaging"]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "mne>=1.0.0",
    "mne-connectivity>=0.7.0",
    "scikit-learn>=1.0.0",
    "scikit-image>=0.19.0",
    "opencv-python>=4.5.0",
    "tensorflow>=2.8.0",
    "pika>=1.2.0",
    "tqdm>=4.62.0",
    "requests>=2.26.0",
    "nibabel>=3.2.0",
    "networkx>=2.6.0",
    "seaborn>=0.11.0",
    "h5py>=3.6.0"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.9.0",
    "isort>=5.10.0",
    "pre-commit>=2.17.0"
]
visualization = [
    "nilearn>=0.9.0",
    "plotly>=5.6.0",
    "ipywidgets>=7.7.0"
]
calcium = [
    "caiman>=1.9.0",
    "suite2p>=0.12.0",
    "allensdk>=2.13.0",
    "tifffile>=2022.5.4"
]
fmri = [
    "nilearn>=0.9.0",
    "dipy>=1.5.0"
]
full = [
    "nilearn>=0.9.0",
    "plotly>=5.6.0",
    "ipywidgets>=7.7.0",
    "caiman>=1.9.0",
    "suite2p>=0.12.0",
    "allensdk>=2.13.0",
    "tifffile>=2022.5.4",
    "dipy>=1.5.0"
]

[project.urls]
"Homepage" = "https://github.com/sidhulyalkar/neural_ai_network"
"Bug Tracker" = "https://github.com/sidhulyalkar/neural_ai_network/issues"
"Documentation" = "https://neural-ai-network.readthedocs.io"

[project.scripts]
neural-ai-network = "neural_ai_network.cli:main"
eeg-pipeline-demo = "neural_ai_network.eeg.demos.pipeline_demo:main"
calcium-pipeline-demo = "neural_ai_network.calcium.demos.pipeline_demo:main"